@@ -2,8 +2,8 @@
 \alias{rk.XML.pluginmap}
 \title{Write a pluginmap file for RKWard}
 \usage{
-  rk.XML.pluginmap(name, about, components, plugin.dir =
-  "plugins", hierarchy = "analysis")
+  rk.XML.pluginmap(name, about = NULL, components,
+  plugin.dir = "plugins", hierarchy = "analysis")
 }
 \arguments{
   \item{name}{Character string, name of the plugin.}
@@ -11,7 +11,7 @@
   \item{about}{A list with descriptive information on the
   plugin,its authors and dependencies. See
   \code{link[XiMpLe:rk.XML.about]{rk.XML.about}} for
-  details!}
+  details! Skipped if \code{NULL}.}
 
   \item{components}{A character vector with at least one
   plugin component file name, ending with ".xml".}
